# Flet_Base

./: .env  .env.example  LaMilagrosa.spec  MIGRACION_ABONOS.md  RESUMEN_SISTEMA_COMPLETO.md  SOLUCION_DEUDAS.md  configurar.bat  init_db.py  main.py  main.spec  pyproject.toml  requirements.txt  sincronizar_deudas.py  start.bat  version.txt
.claude/: settings.local.json
Sumatra/: SumatraPDF-settings.txt
assets/temp_pdfs/: .gitkeep
config/: settings.py
controllers/: api_controller.py
core/: router.py  state.py
database/: __init__.py  connection.py  db_service.py  migrate_add_abonos.py
models/: __init__.py  abono.py  cliente.py  producto.py  sesion.py  usuario.py  venta.py
utils/: pdf_generator.py
views/: clientes_page.py  login_page.py  nueva_venta_page.py  page1.py  page2.py  productos_page.py  usuarios_page.py  ventas_page.py
views/components/: sidebar.py
